--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-<<<<<<< HEAD
 <p> new repo</p>
-<p> new feature </p>
-=======
-<p> new repo</p>
->>>>>>> main
+<p> new feature(button) </p>
+<p> check error</p>
